# azcoin-stratum-pool

./: .dockerignore  .env.example  .gitignore  Cargo.toml  FIRST_BLOCK_OPERATIONS_CHECKLIST.md  README.md  push.ps1  t -p coin_azcoin
apps/sv2-orchestrator/: Cargo.toml
apps/sv2-orchestrator/src/: main.rs
crates/api_server/: Cargo.toml
crates/api_server/src/: lib.rs  routes.rs
crates/azcoin-pool/: Cargo.toml
crates/azcoin-pool/src/: composition.rs  lib.rs  main.rs  sv1_handler.rs
crates/azcoin-pool/tests/: api_integration.rs  block_found_submission.rs  job_source_composition.rs  sv1_subscribe_authorize.rs
crates/coin_azcoin/: Cargo.toml
crates/coin_azcoin/src/: api_template_mapper.rs  block_submit.rs  block_template.rs  candidate_submit.rs  chain_config.rs  coinbase_builder.rs  daemon.rs  job_source.rs  lib.rs  node_api.rs  payout_client.rs  raw_block_builder.rs  share_validator.rs  template_mapper.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  tracing.rs
crates/pool_core/: Cargo.toml
crates/pool_core/src/: balance.rs  block.rs  job.rs  lib.rs  payout.rs  round.rs  services.rs  session.rs  share.rs  share_buffer.rs  stats.rs  traits.rs  worker.rs
crates/protocol_sv1/: Cargo.toml
crates/protocol_sv1/src/: domain_mapper.rs  lib.rs  messages.rs  notify.rs  server.rs  session.rs  session_state.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  models.rs  repositories.rs
crates/sv2_scaffold/: Cargo.toml
crates/sv2_scaffold/src/: aggregation.rs  job_bridge.rs  lib.rs  pool_flow.rs  share_flow_check.rs  template_adapter.rs
deploy/: docker-compose.sv2.yml
deploy/configs/: config.example.toml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/env/: .env.sv2.example
deploy/systemd/: azcoin-pool.service
docs/: ADR-001-sv2-pivot.md  RUNBOOK-sv2-local-test.md  vertical-slice-1.md  vertical-slice-2.md  vertical-slice-3.md  vertical-slice-4.md  vertical-slice-5.md
docs/adr/: 0001-new-repo-and-layered-architecture.md  0002-sv1-first-sv2-ready-boundary.md
docs/architecture/: context.md  data-flow.md  sv2-future-bridge.md
scripts/: build.sh  run.sh
