# Operational HTTP API (Axum). /health, /ready, /v1/pool/stats, /v1/pool/workers,
# /v1/pool/jobs/current, /v1/pool/shares/recent. Backed by pool_core services.

[package]
name = "api_server"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
hex = "0.4"
pool_core = { path = "../pool_core" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
