# AZCOIN-specific integration boundary. Daemon/RPC client, block template provider,
# block submission, chain config, placeholder payout client. Minimal but structured.

[package]
name = "coin_azcoin"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
pool_core = { path = "../pool_core" }
sha2 = "0.10"
tokio = { version = "1", features = ["net", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
hex = "0.4"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
mockito = "1"
