# AZCOIN-specific integration layer. DaemonClient (JSON-RPC), NodeApiClient (REST),
# RpcJobSource + NodeApiJobSource, template mapping with coinbase construction,
# AzcoinShareValidator (double-SHA256), AzcoinBlockSubmitter (submitblock RPC),
# solved block header reconstruction and raw block serialization.

[package]
name = "coin_azcoin"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
pool_core = { path = "../pool_core" }
sha2 = "0.10"
tokio = { version = "1", features = ["net", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
hex = "0.4"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] }
bitcoin = "0.32"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
mockito = "1"
