# Shared types, error handling, config primitives, logging helpers, traits used across crates.
# This crate enforces no business logic—only cross-cutting concerns.

[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
