# Protocol-agnostic mining pool domain logic. Job, ShareSubmission, ShareResult, WorkerIdentity.
# ActiveJobRegistry (bounded job cache with clean_jobs invalidation), JobAwareShareProcessor,
# InMemoryWorkerRegistry, InMemoryStatsSnapshot. Traits: JobSource, ShareProcessor,
# ShareValidator, BlockSubmitter, ShareSink. No wire protocol dependency.

[package]
name = "pool_core"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
async-trait = "0.1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
