# Stratum V1 wire protocol. TCP listener, JSON-RPC parsing, session state, domain mapping.
# Full SV1 lifecycle: mining.configure, subscribe, authorize, notify, set_difficulty, submit.
# Session loop uses tokio::select! for server-push job updates via broadcast channel.
# Does NOT own balances, payouts, or rounds. SV2 via separate protocol adapter crate.

[package]
name = "protocol_sv1"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
pool_core = { path = "../pool_core" }
async-trait = "0.1"
tokio = { version = "1", features = ["net", "io-util", "rt", "sync", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tracing = "0.1"
